Add 4.0.x manuals
* Refactor build script.
* Add 4.0.x manuals.